yaml/ingress/guacamole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole-ingress
  namespace: guacamole # 네임스페이스 지정
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx" # 사용할 Ingress Controller
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service # 트래픽을 라우팅할 서비스
              port:
                number: 80
        - path: /guacamole
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
        - path: /guacamole/#/
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
